<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:background="@drawable/hogwarts_bg1"
    android:backgroundTint="#9C000000"
    android:backgroundTintMode="src_over"
    tools:context=".ui.scenes.spells.SpellsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">


            <Button
                android:id="@+id/btnSpellsCharm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/selectable_button"
                android:fontFamily="@font/harrypotterfont"
                android:text="@string/charm" />

            <Button
                android:id="@+id/btnSpellsSpell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/selectable_button"
                android:fontFamily="@font/harrypotterfont"
                android:text="@string/spell" />

            <Button
                android:id="@+id/btnSpellsJinx"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/selectable_button"
                android:fontFamily="@font/harrypotterfont"
                android:text="@string/jinx" />

            <Button
                android:id="@+id/btnSpellsCurse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/selectable_button"
                android:fontFamily="@font/harrypotterfont"
                android:text="@string/curse" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSpells"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#6AC6C6C6"
            android:paddingTop="8dp" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/gold" />
</FrameLayout>